<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yep!</string>
    <string name="action_settings">Enviar</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Bandeja de entrada</string>
    <string name="title_section2">Amigos</string>
    <string name="title_activity_login_activitie">LoginActivitie</string>
    <string name="login">Login</string>
    <string name="hintNameLogin">UserName</string>
    <string name="hintPasswordLogin">Password</string>
    <string name="title_activity_main_activity_tab">MainActivityTab</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sing_up">SignUpActivity</string>
    <string name="NameSingUp">Name</string>
    <string name="PassSingUp">Password</string>
    <string name="EmailSingUp">E-Mail</string>
    <string name="etSinupLogin">Don\'t have an account? Sin Up </string>
    <string name="emailHint">E-mail</string>
    <string name="imageDescription">Yep Background image</string>
    <string name="subtitleTextLogin"></string>
    <string name="textTitleLogin"></string>
    <string name="empty_field_message">Campos de login no coinciden</string>
    <string name="errorMessageSinUp">Error</string>
    <string name="action_logout">Logout</string>
    <string name="logginMessage">Logueando</string>
    <string name="waitingMessage">Por favor,espere.</string>
    <string name="editTextFragmentMainEmpty">Sin Mensajes</string>
    <string name="textViewFragmentFriendsAñadeAmigos">Añade amigos para empezar</string>
    <string name="menuAñadirEditarAmigosMenuActivityTab">Añadir/editar amigos</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="textViewActivityEditFriends">No existen usuarios</string>
    <string name="buttonSIngUpText">Sing Up</string>
    <string name="buttonSingUpCancelText">Cancel</string>
    <string name="ButtonDivideSingUp">Button_divide</string>
    <string name="cameraActionTab">cameraActionTab</string>
    <string name="messageMainActivityVideoSize">Escoge un video menor de 10MB</string>


    <string-array name="camera_choices">
        <item>Haz una foto</item>
        <item>Haz una video</item>
        <item>Elige una foto</item>
        <item>Elige un video</item>
    </string-array>
    <string name="title_activity_recipients">RecipientsActivity</string>
    <string name="editTextRecipientsActivity">Lista de amigos vacia</string>
    <string name="title_activity_view_photo">ViewPhoto</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
