<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.raul.pedraza.yepchewaka.SingUpActivity"
    android:background="@drawable/background_fill"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/imageViewLogin"
        style="@style/AuthBackgroundImage" />

    <TextView
        android:id="@+id/subTitleLogin"
        android:text="@string/textTitleLogin"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitleTextLogin"
        style="@style/AuthSubTitle" />
    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFillContainer">
        <EditText

            android:inputType="textPersonName"
            android:id="@+id/ETName"
            android:hint="@string/NameSingUp"
            style="@style/AuthEditTextName">
            <requestFocus/>
            </EditText>

        <EditText

            android:inputType="textPassword"
            android:id="@+id/ETPass"
            android:hint="@string/PassSingUp"
            style="@style/AuthEditTextName"/>

        <EditText

            android:inputType="textEmailAddress"
            android:id="@+id/ETMail"
            android:hint="@string/EmailSingUp"
            style="@style/AuthEditTextName"/>

        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/ButtonDivideSingUp"
        android:id="@+id/divideButton"/>


    <Button
        android:text="@string/buttonSIngUpText"
        android:id="@+id/buttonSing"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@+id/divideButton"
        android:layout_marginRight="0dp"/>
    <Button
        android:text="@string/buttonSingUpCancelText"
        android:id="@+id/buttonSingCancel"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@+id/divideButton"
        android:layout_marginLeft="0dp"/>




</RelativeLayout>
