<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="es.raul.pedraza.yepchewaka.LoginActivity"
    android:id="@+id/layoutLogin"
    android:background="@drawable/background_fill">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageViewLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/background"
        android:scaleType="fitStart"
        android:contentDescription="@string/imageDescription"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameLogin"
        android:hint="@string/hintNameLogin"
        android:elegantTextHeight="false"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/passwordLogin"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLogin"
        android:hint="@string/hintPasswordLogin"
        android:layout_above="@+id/buttonLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="196dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etSinupLogin"
        android:id="@+id/textView"
        android:textSize="@dimen/textSizeTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="77dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleLogin"
        android:textSize="@dimen/textSizeTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subtitleLogin"
        android:textSize="@dimen/textSizeTextView"
        android:layout_below="@+id/titleLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subTitleLogin"
        android:textSize="@dimen/sizeTextTitle"
        android:text="@string/textTitleLogin"
        android:layout_alignTop="@+id/titleLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTitleLogin"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle"
        android:text="@string/subtitleTextLogin"
        android:textSize="@dimen/subtitleLoginSize"
        android:layout_below="@+id/subTitleLogin"
        android:layout_alignLeft="@+id/subTitleLogin"
        android:layout_alignStart="@+id/subTitleLogin"
        android:textStyle="bold"
        android:textColor="@color/subtitleLogin" />


</RelativeLayout>
